<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="slogan">Find a nice restaurant and invite your co-workers for lunch</string>

    <string name="navigation_lunch">Your Chosen Restaurant</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_logout">Log out</string>

    <string name="login">Log In</string>
    <string name="signin">Sign In</string>

    <string name="google">Google</string>
    <string name="github">GitHub</string>

    <string name="notification">Notification</string>
    <string name="gps">GPS</string>
    <string name="lunch_notifications">Lunch notifications</string>
    <string name="gps_settings">Change GPS setting</string>

    <string name="bottom_map">Map</string>
    <string name="bottom_restaurant">Restaurants</string>
    <string name="bottom_workmate">Workmates</string>

    <string name="content_description_user_avatar">User Avatar</string>
    <string name="content_description_photo_restaurant">Restaurant\'s photo</string>
    <string name="content_description_workmate_avatar">Workmate Avatar</string>
</resources>